; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/crypto/extr_cryptocheck.c_enable_user_soft.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/crypto/extr_cryptocheck.c_enable_user_soft.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRYPT_SOFT_ALLOW = common dso_local global i32 0, align 4
@reset_user_soft = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @enable_user_soft to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_user_soft() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 1, i32* %2, align 4
  store i64 4, i64* %3, align 8
  %4 = load i32, i32* @CRYPT_SOFT_ALLOW, align 4
  %5 = call i64 @sysctlbyname(i32 %4, i32* %1, i64* %3, i32* %2, i32 4)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %0
  %8 = load i32, i32* %1, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = load i32, i32* @reset_user_soft, align 4
  %12 = call i32 @atexit(i32 %11)
  br label %13

13:                                               ; preds = %10, %7
  br label %14

14:                                               ; preds = %13, %0
  ret void
}

declare dso_local i64 @sysctlbyname(i32, i32*, i64*, i32*, i32) #1

declare dso_local i32 @atexit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
